Fix Firefox image overspill in a way that doesn't break the download controls

--- a/public/stylesheets/app/editor/output.less
+++ b/public/stylesheets/app/editor/output.less
@@ -349,8 +349,10 @@
 		.display-data-inner {
 			display: inline-block;
 			position: relative;
+			max-width: 100%;
 			&.display-data-inner-full-width {
 				display: block;
+				width: 100%;
 			}
 		}
 		
